--- a/packages/ckeditor5-fullscreen/lang/translations/da.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/da.po
@@ -29,8 +29,8 @@ msgstr "Slå fuldskærmstilstand til/fra"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Dokumentoversigt"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Tilsluttede brugere"
