--- a/packages/ckeditor5-fullscreen/lang/translations/et.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/et.po
@@ -29,8 +29,8 @@ msgstr "Lülita täisekraani režiim sisse-välja"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Dokumendi ülevaade"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Ühenduses kasutajad"
