--- a/packages/ckeditor5-fullscreen/lang/translations/sr.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/sr.po
@@ -29,8 +29,8 @@ msgstr "Uključite režim celog ekrana"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Struktura dokumenta"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Povezani korisnici"
