--- a/packages/ckeditor5-fullscreen/lang/translations/sv.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/sv.po
@@ -29,8 +29,8 @@ msgstr "Skifta helskärmsläge"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Dokumentöversikt"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Anslutna användare"
