--- a/packages/ckeditor5-fullscreen/lang/translations/zh.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/zh.po
@@ -29,8 +29,8 @@ msgstr "切換全螢幕模式"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "文件大綱"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "已連線使用者"
