--- a/packages/ckeditor5-fullscreen/lang/translations/ar.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/ar.po
@@ -29,8 +29,8 @@ msgstr "تبديل وضع ملء الشاشة"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "مخطط المستند"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "المستخدمون المتصلون"
