--- a/packages/ckeditor5-fullscreen/lang/translations/bg.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/bg.po
@@ -29,8 +29,8 @@ msgstr "Превключване на режима на цял екран"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Вид на документа"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Свързани потребители"
