--- a/packages/ckeditor5-fullscreen/lang/translations/de.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/de.po
@@ -29,8 +29,8 @@ msgstr "Vollbildmodus umschalten"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Dokumentgliederung"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Verbundene Nutzer"
