--- a/packages/ckeditor5-fullscreen/lang/translations/fi.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/fi.po
@@ -29,8 +29,8 @@ msgstr "Vaihda koko näytön tilaa"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Verkkoasiakirja"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Liitetyt käyttäjät"
