--- a/packages/ckeditor5-fullscreen/lang/translations/fr.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/fr.po
@@ -29,8 +29,8 @@ msgstr "Activer/désactiver le mode plein écran"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Plan du document"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Utilisateurs connectés"
