--- a/packages/ckeditor5-fullscreen/lang/translations/he.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/he.po
@@ -29,8 +29,8 @@ msgstr "החלף מצב מסך מלא"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "מפת מסמך"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "משתמשים מחוברים"
