--- a/packages/ckeditor5-fullscreen/lang/translations/hu.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/hu.po
@@ -29,8 +29,8 @@ msgstr "Váltás teljes képernyőre"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Dokumentum vázlata"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Csatlakozott felhasználók"
