--- a/packages/ckeditor5-fullscreen/lang/translations/id.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/id.po
@@ -29,8 +29,8 @@ msgstr "Alihkan mode layar penuh"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Garis besar dokumen"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Pengguna yang terhubung"
