--- a/packages/ckeditor5-fullscreen/lang/translations/ko.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/ko.po
@@ -29,8 +29,8 @@ msgstr "전체 화면 모드 전환"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "문서 외곽선"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "참여 사용자"
