--- a/packages/ckeditor5-fullscreen/lang/translations/lv.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/lv.po
@@ -29,8 +29,8 @@ msgstr "Pārslēgt uz pilnekrāna režīmu"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Dokumenta izklāsts"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Pievienotie lietotāji"
