--- a/packages/ckeditor5-fullscreen/lang/translations/ms.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/ms.po
@@ -29,8 +29,8 @@ msgstr "Togol mod skrin penuh"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Garis luar dokumen"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Pengguna dihubungkan"
