--- a/packages/ckeditor5-fullscreen/lang/translations/nl.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/nl.po
@@ -29,8 +29,8 @@ msgstr "Volledig scherm inschakelen"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Overzicht document"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Aangesloten gebruikers"
