--- a/packages/ckeditor5-fullscreen/lang/translations/pl.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/pl.po
@@ -29,8 +29,8 @@ msgstr "Przełącz tryb pełnoekranowy"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Zarys dokumentu"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Połączeni użytkownicy"
