--- a/packages/ckeditor5-fullscreen/lang/translations/pt-br.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/pt-br.po
@@ -29,8 +29,8 @@ msgstr "Alternar modo tela cheia"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Contorno do documento"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Usuários conectados"
