--- a/packages/ckeditor5-fullscreen/lang/translations/ru.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/ru.po
@@ -29,8 +29,8 @@ msgstr "Переключить полноэкранный режим"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Состав документа"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Подключенные пользователи"
