--- a/packages/ckeditor5-fullscreen/lang/translations/sk.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/sk.po
@@ -29,8 +29,8 @@ msgstr "Prepnúť režim celej obrazovky"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Náčrt dokumentu"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Pripojení používatelia"
