--- a/packages/ckeditor5-fullscreen/lang/translations/uk.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/uk.po
@@ -29,8 +29,8 @@ msgstr "Увімкнути повноекранний режим"
 
 msgctxt "Label for a sidebar header that contains a document outline"
 msgid "Document outline"
-msgstr ""
+msgstr "Структура документа"
 
 msgctxt "Label for a sidebar header that contains a list of connected users"
 msgid "Connected users"
-msgstr ""
+msgstr "Підключені користувачі"
